[package]
name = "mochizuki"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT"
description = "Generic SQLite + FTS5 database operations: insert, search, upsert, prune, history"
repository = "https://github.com/pleme-io/mochizuki"
homepage = "https://github.com/pleme-io/mochizuki"
keywords = ["sqlite", "fts5", "database", "search"]
categories = ["database"]

[lints.clippy]
pedantic = "warn"

[dependencies]
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
